syntax = "proto3";

package transactions.v1;

enum TransactionTypeEnum {
  PAYOUT = 0;
  TOPUP = 1;
  TRANSFER = 2;
}
