syntax = "proto3";

package transactions.v1;

message CreateTransactionResponseMessage {
  string transaction_uuid = 1;
}
